# overclock-ai

./: .gitignore  Cargo.toml  README.md
.ai/: architecture.md  data_collection_config.json  feature_list.json  harness_config.json  progress.md
.ai/training_data/: README.md
crates/overclock-adapters/: Cargo.toml
crates/overclock-adapters/src/: adapter_trait.rs  codebuddy.rs  custom_api.rs  gemini.rs  kiro.rs  lib.rs  trae.rs
crates/overclock-cli/: Cargo.toml
crates/overclock-cli/src/: main.rs
crates/overclock-cli/src/commands/: config.rs  init.rs  mod.rs  monitor.rs  run.rs  status.rs  task.rs
crates/overclock-core/: Cargo.toml
crates/overclock-core/src/: config.rs  context.rs  event.rs  harness.rs  lib.rs  recovery.rs  role.rs  task.rs  telemetry.rs  validation.rs  workflow.rs
crates/overclock-core/tests/: integration_test.rs
crates/overclock-server/: Cargo.toml
crates/overclock-server/src/: main.rs
docs/: adapters.md  adr.md  architecture.md  roadmap.md
