[workspace]
members = [
    "crates/overclock-core",
    "crates/overclock-cli",
    "crates/overclock-adapters",
    "crates/overclock-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["overclock-ai contributors"]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "1.0.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.79"
futures = "0.3.30"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
thiserror = "2.0.18"
clap = { version = "4.5.15", features = ["derive"] }
rand = "0.10.0"
