[package]
name = "overclock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for overclock-ai"

[[bin]]
name = "overclock-ai"
path = "src/main.rs"

[dependencies]
overclock-core = { path = "../overclock-core" }
overclock-adapters = { path = "../overclock-adapters" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.26.0", features = ["crossterm"] }
crossterm = "0.26.1"
